# RADiCAL2026

./: .gitignore  README.md
.claude/: settings.local.json
RADiCALsim1/: CLAUDE.md  CMakeLists.txt  README.md  radical.cc  run_batch.mac  run_scan.sh  setup_env.sh  vis.mac
RADiCALsim1/analysis/: compare_data.C  compare_graphs.C  plot_testbeam.C  scan_resolution.C
RADiCALsim1/include/: ActionInitialization.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
RADiCALsim1/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
firstsim/: CMakeLists.txt  firstsim.cc
firstsim/include/: ActionInitialization.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
firstsim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  SteppingAction.cc
simulations/RADiCALsim1/: CLAUDE.md  README.md  opt1000.mac  opt25.mac  radical.cc  run_batch.mac  run_optical_scan_1000.sh  vis_optical.mac
simulations/RADiCALsim1/analysis/: compare_data.C  fix_titles.C  plot_lateral_profile.C  plot_leakage.C  plot_linearity.C  plot_shower_profile.C  plot_testbeam.C  plot_timing_vs_LY.C  scan_resolution.C
simulations/RADiCALsim1/include/: DetectorConstruction.hh
simulations/RADiCALsim1/src/: .ActionInitialization.cc.swp  .DetectorConstruction.cc.swp  DetectorConstruction.cc  EventAction.cc
simulations/firstsim/: vis.mac
simulations/firstsim/include/: EventAction.hh
(+2 files in other folders)
